# a-try-

./: .gitignore  README.md
MJCF/: CF.STL  GBC486.SLDASM.csv  GBC486.SLDASM.urdf  IJ.STL  IO.STL  JM.STL  KN.STL  OP.STL  axis.xml  env.xml  robot.xml  wheel_left.STL
mujoco_control_extract/: MUJOCO_LOG.TXT  mjmodel.xml
mujoco_control_extract/Application/RobotParam/Inc/: Config.h  robot_param.h
mujoco_control_extract/Application/Task/Inc/: ChassisL_Task.h  ChassisR_Task.h  Chassis_Task.h  INS_Task.h  Observe_Task.h  PS2_Task.h  Remote_Task.h
mujoco_control_extract/Application/Task/Src/: ChassisL_Task.c  ChassisR_Task.c  Chassis_Task.c  INS_Task.c  Observe_Task.c  PS2_Task.c  Remote_Task.c
mujoco_control_extract/Application/TypeDef/Inc/: ps2_typedef.h  robot_typedef.h  struct_typedef.h
mujoco_control_extract/Components/Algorithm/Inc/: Kalman_Filter.h  LPF.h  Mahony_Filter.h  QuaternionEKF.h  Ramp.h  VMC_Calc.h
mujoco_control_extract/Components/Algorithm/Src/: Kalman_Filter.c  LPF.c  Mahony_Filter.c  QuaternionEKF.c  Ramp.c  VMC_Calc.c
mujoco_control_extract/Components/Controller/Inc/: Controller.h  PID.h
mujoco_control_extract/Components/Controller/Src/: Controller.c  PID.c
mujoco_control_extract/Components/Device/Inc/: Motor.h  Remote_Control.h
mujoco_control_extract/Components/Device/Src/: Motor.c  Remote_Control.c
mujoco_control_extract/Components/Lib/Inc/: User_Lib.h
mujoco_control_extract/Components/Lib/Src/: User_Lib.c
mujoco_control_extract/sim/: CMakeLists.txt  README_MUJOCO_WSL.md  main_mujoco.c  sim_adapter.c  sim_adapter.h
mujoco_control_extract/sim/models/: rm_robot.xml
mujoco_control_extract/sim/port/: BMI088driver.h  arm_math.h  bsp_can.h  bsp_dwt.h  bsp_pwm.h  cmsis_os.h  main.h  sim_platform.c  stm32h723xx.h  stm32h7xx.h  tim.h
mujoco_pos_debug/: CMakeLists.txt  README.md  pos_debug.c  pos_debug.h
rm_test_dev/mujoco_control_extract/sim/: analysis_notes.md  sim_adapter.c
rm_test_dev/mujoco_control_extract/sim/port/: arm_math.h  bsp_can.h  cmsis_os.h  stm32h723xx.h  tim.h
rm_test_dev/rm_test-dev/: .gitignore  .mxproject  LICENSE  README.md  mujoco_plan.md  rm_test.ioc
rm_test_dev/rm_test-dev/MDK-ARM/: rm_test.uvoptx  rm_test.uvprojx  startup_stm32h723xx.lst
rm_test_dev/rm_test-dev/doc/: Architecture.md
rm_test_dev/rm_test-dev/tools/: cal_phi1_phi4.py
rm_test_dev/wheel_leg_mujoco/: Controller.py  Simulation.py  VMC.py  caculation.py  environment.py  keyboard.py  readme.txt
rm_test_dev/wheel_leg_mujoco/MJCF/: AB.STL  AG.STL  BE.STL  EC.STL  GH.STL  MK.STL  axis.xml  env.xml  robot.xml  wheel_right.STL
(+144 files in other folders)
